updated api URL and removed an endpoint
